pootle/static/css/editor.css
/* ... */
tr.edit-ctx.before td
{
    border-top: 1px solid #d9d9d9;
    border-bottom: 1px dashed #d9d9d9;
}

tr.edit-ctx.after td
{
    border-top: 1px dashed #d9d9d9;
    border-bottom: 1px solid #d9d9d9;
}

tr.ctx-row,
tr.view-row
{
    font-size: 92%;
    cursor: pointer;
}

tr.edit-ctx,
tr.ctx-row
{
    background-color: #f8fbfb;
}

tr.ctx-row
{
    color: #777;/*#76a1b0;*/
}

tr.ctx-row.before
{
    border-bottom: 1px solid #fff;
}

tr.ctx-row.after
{
    border-top: 1px solid #fff;
}

tr.view-row
{
    border-top: 1px solid #fff;
    border-bottom: 1px solid #fff;
}

tr.view-row:hover
{
    background-color: #d9edf4;
}

.translation-text
{
    max-width: 100%;
    overflow: auto;
    font-size: 115%;
}

div.sources
{
    margin-top: 2em;
    margin-bottom: -0.5em; /* depends on zoom level */
}


body.zoom-out-1 div.sources
{
    margin-bottom: -0.7em;
}

body.zoom-out-2 div.sources
{
    margin-bottom: -1em;
}

div.sources .translation-text
{
    padding: 0.1em 0;
}

body.zoom-out-1 div.sources .translation-text
{
    padding-top: 0.4em;
}

body.zoom-out-1 div.sources .alternative .translation-text
{
    font-size: 98%;
}

body.zoom-out-2 div.sources .translation-text
{
    padding-top: 0.2em;
}

body.zoom-out-2 div.sources .alternative .translation-text
{
    font-size: 95%;
}

.translation-text-headers
{
    color: #999;
    font-size: 85%;
    position: relative;
    border-bottom: 1px dotted #d9d9d9;
    padding-top: 0.5em;
}

.translation-space
{
    padding: 0 4px;
    margin: 0 0.2em;
    background-image: url('../images/squiggle.png');
    background-repeat: repeat-x;
    background-position: text-bottom;
    vertical-align: middle;
}

/* TRANSLATION UNIT LAYOUT */

div.translate-container
{
    position: relative;
}

div.translate-left,
div.translate-right
{
    margin-top: 1em;
}


div.translate-left
{
    float: left;
    width: 24.5%;
}

div.translate-middle
{
    width: 50%;
    margin: 0 auto;
    position: relative;
}

div.translate-right
{
    float: right;
    width: 24.5%;
}

/* ORIGINAL */

div.source-language
{
    margin-bottom: 1em;
}

div.language-name
{
    border-top: 1px dotted #d9d9d9;
    border-left: 1px dotted #d9d9d9;
    border-right: 1px dotted #d9d9d9;
    border-bottom: 1px solid #f1f7f8;
    -webkit-border-radius: 5px 5px 0 0;
       -moz-border-radius: 5px 5px 0 0;
            border-radius: 5px 5px 0 0;

    padding: 1px 5px 0px;
    display: inline-block;
    position: absolute;
    bottom: -1px;
}

.translate-focus div.translate-original,
{
    color: #130f30;
}

div.alternative
{
    color: #777;
}

table td.translate-original,
table td.translate-translation
{
    padding: 0.5em 5px;
}


/* COMMENTS */

.comments
{
    clear: both;
    color: #666;
}

.comments p
{
    display: inline;
    font-size: 85%;
    line-height: 120%;
}

.sidetitle,
.comments .developer-comments
{
    display: inline;
}

.translate-locations,
.developer-comments,
.translate-context
{
    margin-bottom: 0.5em;
}

.translate-locations,
.translate-context-value
{
    font-size: 90%;
    display: inline;
    word-wrap: break-word;
}

.translate-context-value
{
    font-weight: bold;
}

#comment-form textarea
{
    vertical-align: top;
    padding: 0;
    min-height: 1em;
    width: 100%;
    color: #666;
    font-size: 90%;
    line-height: 1.2em;
    margin-bottom: 5px;
}

/* TODO: review this */
.terminology div.translator-comments
{
    background-color: #eaf0f4;
    border: 1px solid #d2e1ed;
    overflow: auto;
    padding: 5px;
}


/* TRANSLATION */

td.translate-focus
{
    border-top: 1px solid #d9d9d9;
    border-bottom: 1px solid #d9d9d9;
    vertical-align: top;
}

td.translate-full div.translate-original
{
    width: 100%;
    margin: 0.5em 0;
}

td.translate-full textarea.translation
{
    width: 100%;
    margin: 0 auto 0.5em;
    padding: 0;
    min-height: 2.7em; 
}


/* TM and suggestions */

.sidebar
{
    padding: 0 20px 1em;
}

body.zoom-out-1 .sidebar
{
    padding-bottom: 0.7em;
}

body.zoom-out-2 .sidebar
{
    padding-bottom: 0.5em;
}

.sidetitle,
.extra-item-meta,
.extra-item-title
{
    color: #999;
    font-size: 85%;
}

#tm
{
    position: relative;
}

.tm-unit
{
    margin: 0 0.5em 0.5em 0;
    padding: 0.1em 0.5em;
    border: 1px dotted #999;
    cursor: pointer;
    display: inline-block;
    font-size: 90%;
}

.tm-unit:hover {
    background-color: #fff;
}

.tm-original
{
    font-weight: bolder;
    padding-right: 0.3em;
}

#tm[dir="rtl"] .tm-original
{
    padding-right: auto;
    padding-left: 0.3em;
}

.tm-translation
{
    font-style: oblique;
}

.tm-translation[dir="rtl"]
{
    text-align: right;
}

/* EXTRAS: SUGGESTIONS, TM RESULTS, COMMENTS */

#extras-container
{
    margin-top: 1em;
}

#extras-bar,
.extra-item-title
{
    margin-left: 5%;
}

html[dir="rtl"] #extras-bar,
html[dir="rtl"] .extra-item-title
{
    margin-left: 0;
    margin-right: 5%;
}

#extras-bar a
{
    cursor: pointer;
    margin-right: 10px;
    font-size: 0.9em;
}

html[dir="rtl"] #extras-bar a
{
    margin-right: 0;
    margin-left: 10px;
}

.extra-item-block
{
    position: relative;
}

.extra-item-block:last-child
{
    margin-bottom: 0;
}

.suggestion-action img
{
    top: 50%;

    filter:alpha(opacity=10);
    opacity: 0.1;
}

a.suggestion-action,
a.suggestion-vote
{
    float: right;
}

html[dir="rtl"] .suggestion-action,
html[dir="rtl"] .suggestion-vote
{
    float: left;
}

.extra-item-block:hover .suggestion-action img,
.extra-item-block:hover .suggestion-vote img
{
    filter:alpha(opacity=50);
    opacity: 0.5;
}

.extra-item-block .suggestion-action img:hover,
.extra-item-block .suggestion-vote:hover img
{
    filter:alpha(opacity=100);
    opacity: 1;
}

.num-votes
{
    position: absolute;
    top: 8px;
    right: 0.9em;
    text-shadow: 0 0 8px #777;
}

.suggestion-vote img
{
    top: 50%;

    filter:alpha(opacity=30);
    opacity: 0.3;
}
/* ... */

